--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,36 @@
+.app-intro {
+	padding-left: 20px;
+	background-color: #eeeeee; 
+	display: block;
+	width: 100%;
+	padding-bottom: 20px;
+}
+
+.create-room {
+	padding: 20px;
+}
+
+.btn-createroom {
+	width: 175px;
+	height: 60px;
+	border-radius: 15px;
+	font-size: 20px;
+}
+
+.rooms {
+	padding: 20px;
+}
+
+.existing-rooms a h3 {
+	text-transform: capitalize;
+}
+
+.existing-rooms a {
+	width: 30%;
+	margin: 10px;
+	float: left;
+}
+
 .user-name {
 	text-transform: capitalize;
 }
