--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -31,6 +31,14 @@
 	float: left;
 }
 
+.join-room {
+	text-decoration: underline;
+	text-transform: uppercase;
+	padding-left: 40px;
+	color: #c72f09;
+	font-weight: bold;
+}
+
 .user-name {
 	text-transform: capitalize;
 }
